--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./public./styles.css">
   <title>Heroku Test</title>
 </head>
 <body>
   <h1>This is my heroku deployment!!!</h1>
   <p class="intro">This is my first deployment. WOOT!</p>
-  <script src="main.js"></script>
+  <img src="./The_Two_Faces_of_Squidward_075.png" alt="handsome-squidward photo"/>
+  <script src=".public/main.js"></script>
 </body>
 </html>
